fixed categories spacing

--- a/resources/assets/styles/components/_wp-classes.scss
+++ b/resources/assets/styles/components/_wp-classes.scss
@@ -54,3 +54,7 @@
   @extend .sr-only;
   @extend .sr-only-focusable;
 }
+
+.navbar-nav {
+  gap: 30px;
+}
